--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_URL = 'https://api.openweathermap.org/data/2.5'
-REACT_APP_API_KEY = '9c56fbbbda0febbc69741a4d7aa70d85'
+REACT_APP_API_KEY = 9c56fbbbda0febbc69741a4d7aa70d85
 REACT_APP_ICON_URL = 'https://openweathermap.org/img/w'
